# CS6340-Lab-5-CBI

./: README.md
cbi/: CMakeLists.txt
cbi/include/: CBIInstrument.h  Utils.h
cbi/lib/: runtime.c
cbi/src/: CBI.cpp  CBIInstrument.cpp
cbi/test/: Makefile  fuzz1.c  fuzz2.c  fuzz3.c  simple1.c
